# resource-cycles

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: lint-and-test.yml
crates/.github/workflows/: lint-and-test.yml
crates/chemical-reactions/: Cargo.toml
crates/chemical-reactions/src/: lib.rs
crates/oxygen-not-included/: Cargo.toml
crates/oxygen-not-included/src/: lib.rs
crates/oxygen-not-included/src/plants/: mod.rs  ovagro_node.rs
crates/oxygen-not-included/src/resources/: food.rs  mod.rs  water.rs
crates/oxygen-not-included/src/units/: calories.rs  mass.rs  mod.rs  time.rs
crates/resource-chains/: Cargo.toml  README.md
crates/resource-chains-derive/: Cargo.toml
crates/resource-chains-derive/src/: lib.rs  reflective.rs
crates/resource-chains-macros/: Cargo.toml  README.md
crates/resource-chains-macros/src/: lib.rs  reflective.rs
crates/resource-chains/src/: lib.rs  prelude.rs  process.rs  resource.rs  units.rs
crates/resource-cycles/: Cargo.toml
crates/resource-cycles-derive/: Cargo.toml
crates/resource-cycles-derive/src/: lib.rs
crates/resource-cycles/src/: lib.rs  process.rs  resource.rs  units.rs
crates/test-suite/: Cargo.toml
crates/test-suite/src/: lib.rs  main.rs  reflective.rs
