[workspace]
members = [
    "crates/chemical-reactions",
    "crates/oxygen-not-included",
    "crates/resource-chains",
    "crates/resource-chains-derive",
    "crates/test-suite",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

# TODO: Najib: Rework the `lints` section after [this issue](https://github.com/rust-lang/cargo/issues/12918) is resolved.

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -3 }
suspicious = { level = "warn", priority = -4 }
style = { level = "warn", priority = -5 }
complexity = { level = "warn", priority = -6 }
perf = { level = "warn", priority = -7 }
unwrap_used = { level = "warn", priority = -8 }
expect_used = { level = "warn", priority = -9 }
panic = { level = "warn", priority = -10 }
cast_lossless = { level = "warn", priority = -11 }
missing_docs_in_private_items = { level = "warn", priority = -12 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }

[workspace.dependencies]
resource-chains = { path = "crates/resource-chains" }
resource-chains-derive = { path = "crates/resource-chains-derive" }
anyhow = "1.0.102"
quote = "1.0.45"
syn = "2.0.117"
deluxe = "0.5.0"
proc-macro2 = "1.0.106"
