[package]
name = "resource-chains-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
deluxe = { workspace = true }
proc-macro2 = { workspace = true }
quote.workspace = true
syn.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dev-dependencies]
resource-chains.workspace = true
