[package]
name = "resource-chains-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
deluxe.workspace = true
lazy-regex.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dev-dependencies]
resource-chains.workspace = true
